--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,64 +1,35 @@
-
-  .nav-wrapper {
-    display: flex;
-    padding: 40px;
-    color: rgb(155, 123, 65);
-    border: 1px solid black;
-    background-color: black;
-  }
-  .right-side{
-    display: flex;
-  }
-  
-  .left-side {
-    display: flex;
-  }
-  
-  .nav-wrapper > .right-side > div {
-    /* margin-right: 20px; */
-    text-transform: uppercase;
-    font-size: 0.9rem;
-  }
-  
-  .nav-wrapper > .left-side > div {
-    margin-right: 10px;
-    text-transform: uppercase;
-    font-size: 0.7rem;
-  }
-  
-  .nav-link-wrapper {
-    height: 22px;
-    border-bottom: 1px solid transparent;
-    transition: border-bottom 0.5s;
-  }
-  
-  .active-nav-link {
-    border-bottom: 1px solid white;
-  }
-  
-  .nav-link-wrapper a {
-    color: wheat;
-    text-decoration: none;
-    transition: color 0.5s;
-  
-  }
-  
-  
-  .nav-link-wrapper div:hover {
-    border-bottom: 1px solid white
-  }
-  
-  .nav-link-wrapper a:hover {
-    color: rgb(161, 126, 59)
-  }
-  
-  #nasaImg{
+#nasaImg{
     
-    height: 55px;
-    position: relative;
-    bottom: 25px;
-    right: -60px;
-  
-  
-  }
-  
+  height: 40px;
+  position: relative;
+
+
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(12, 8, 8);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
